Camlp5 Version 6.10:
--------------------

* [19 Jun 13] Updated for ocaml version 4.01.0
* [14 Jun 13] (experimental) Now, in revised syntax, a "." followed by
  a newline is interpreted as a ";", allowing to end phrases with ".".
  Drawback: will syntax error when writing a record/module access in two
  lines ending the first one with "." like:
     foo.
     bar

Camlp5 Version 6.09:
--------------------

* [22 Apr 13] Accept now "match with | | ... end" in revised syntax, with
  a required "|" in the first case, as alternative syntax for match.
* [19 Apr 13] Added function 'Pcaml.value greek_ascii_equiv' giving
  an ascii equivalent to a greek (utf8) letter representing a type
  parameter. E.g. 'a' for 'α', 'b' for 'β', and so on.
* [19 Mar 13] Fixed bug no locations built in some cases of constructors.
* [15 Mar 13] Updated for ocaml version 4.00.2.
* [13 Mar 13] Fixed bug: in toplevel, the highlighting of errors did not
  work.
* [13 Mar 13] Added option '-dquot' to specify the default quotation name.
  and the ability to use "#option" directive with two parameters. Therefore,
  we can use either (e.g.):
      -dquot "expr"
  in the command line of camlp5 or
      #option "-dquot" "expr"
  inside a file.

Camlp5 Version 6.08:
--------------------

* [06 Mar 13] Now 'make' displays a message how to compile, instead
  of doing 'make out'. Old behaviour of 'make' must be now 'make out'.
* [28 Feb 13] Now accept identifiers starting with a greek letter as
  variable names.
* [28 Jan 13] Fixed bug: DEFINE FOO=32 while using pa_macro.cmo did not work
  due to a bad order in grammar insertion.
* [08 Oct 12] Fixed bug: parsing greek letters as type variable in
  constructor declaration did not work when building Camlp5.

Camlp5 Version 6.07:
--------------------

* [12 Sep 12] Added compatibility with OCaml 4.00.1.
* [06 Jun 12] Fixed bug: open record patterns {a=b;c=d;_} did not work.

Camlp5 Version 6.06:
--------------------
