@@ -1,3 +1,9 @@
+Camlp5 Version 6.11:
+--------------------
+
+* [02 Jul 13] Now accept lowercase ident for module types, like ocaml does.
+  Accepted also in revised syntax.
+
 Camlp5 Version 6.10:
 --------------------
 
